upload de ficheiros para o azure funcional (por equanto só dá para dar upload da foto de perfil pois é unico caso implementado)
